[package]
name = "send2kindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
anyhow = "1.0.75"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.21.2"
serde_json = "1.0.105"
dotenv_codegen = "0.15.0"
axum = "0.6.20"
serde = "1.0.183"
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
