[package]
name = "send2kindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slug = "0.1.4"
axum = "0.6.20"
anyhow = "1.0.75"
serde = "1.0.183"
base64 = "0.21.2"
dotenv = "0.15.0"
tracing = "0.1.37"
serde_json = "1.0.105"
headless_chrome = "1.0.5"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
validator = { version = "0.16.1", features = ["derive"] }
lettre = "0.10.4"
