[package]
name = "send2kindle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slug = "0.1.4"
axum = "0.6.20"
anyhow = "1.0.75"
serde = "1.0.183"
dotenv = "0.15.0"
tracing = "0.1.37"
mail-send = "0.4.0"
mail-builder = "0.3.0"
serde_json = "1.0.105"
headless_chrome = "1.0.5"
tracing-subscriber = "0.3.17"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.16.1", features = ["derive"] }
chromiumoxide = { git = "https://github.com/mattsse/chromiumoxide", features = ["tokio-runtime"], default-features = false, branch = "main"}
futures = "0.3.28"
